fix extra space issue

--- a/src/app/core/layouts/article-layout/components/form/form.component.scss
+++ b/src/app/core/layouts/article-layout/components/form/form.component.scss
@@ -6,6 +6,7 @@
     gap: 50px;
 	width: 100%;
 	padding: 180px 25px;
+    background-color: #F4F4F4;
 }
 
 h1 {
