--- a/src/app/core/layouts/blog-layout/components/blog-banner/blog-banner.component.scss
+++ b/src/app/core/layouts/blog-layout/components/blog-banner/blog-banner.component.scss
@@ -10,6 +10,8 @@
     background-size: cover;
     background-position: center;
     transition: all .3s;
+    position: relative;
+    z-index: -1;
 }
 
 .content {
