--- a/src/app/core/layouts/blog-layout/components/blog-intro/blog-intro.component.scss
+++ b/src/app/core/layouts/blog-layout/components/blog-intro/blog-intro.component.scss
@@ -9,6 +9,7 @@ p {
     line-height: 38.25px;
     text-align: center;
     background: #F4F4F4;
+    margin: 0;
 }
 
 @media screen and (max-width: 900px) {
