--- a/src/app/core/layouts/home-layout/components/article-cards/article-cards.component.scss
+++ b/src/app/core/layouts/home-layout/components/article-cards/article-cards.component.scss
@@ -7,7 +7,7 @@ h2 {
     background-color: #F4F4F4;
     padding-top: 180px;
     margin: 0;
-    margin-bottom: 50px;
+    padding-bottom: 50px;
     padding-left: 25px;
     padding-right: 25px;
 
