--- a/src/styles.scss
+++ b/src/styles.scss
@@ -66,7 +66,7 @@
 }
 
 body {
-    background: rgba(244, 244, 244, 1);
+    background: white;
 
     height: 100%;
 }
